tests/profile/error/property/wrongtype_name.profile
{
  "version": { "major": 12, "minor": 13 },
  "properties": [
    {
      "type": "setPropertyValue",
      "name": 1.0,
      "value": "property_value_1"
    }
  ]
}
